Name: graphics-geometrycombinators
Description:
    A functional wrapper around 3D geometry in OpenGL.
Version: 0.0.1
Stability: experimental
Synopsis: A functional wrapper around 3D geometry in OpenGL.
License: BSD3
Category: Graphics
Author: Luke Palmer
Homepage: http://github.com/luqui/graphics-geometrycombinators
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
cabal-Version: >= 1.6

Library
    Build-Depends: base == 4.*, OpenGL == 2.4.*
    Exposed-Modules: Graphics.GeometryCombinators
    ghc-options : -Wall 
    Ghc-Prof-Options:  -prof -auto-all
